--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             --text: #590d22;
             --text-light: #800f2f;
             --success: #80b918;
+            --overlay: rgba(89, 13, 34, 0.6);
         }
 
         * {
@@ -36,7 +37,7 @@
 
         header {
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             background: linear-gradient(135deg, var(--primary), var(--primary-dark));
             color: white;
             padding: 30px 20px;
@@ -52,6 +53,32 @@
         .subtitle {
             font-size: 0.9rem;
             opacity: 0.9;
+        }
+
+        /* Botão Lista de Compras */
+        .btn-shopping {
+            display: block;
+            width: 100%;
+            background-color: #fff;
+            color: var(--primary-dark);
+            border: 2px solid var(--primary);
+            padding: 12px;
+            border-radius: 15px;
+            font-weight: bold;
+            font-size: 1rem;
+            margin-bottom: 25px;
+            cursor: pointer;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            transition: transform 0.2s;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .btn-shopping:active {
+            transform: scale(0.98);
+            background-color: var(--bg);
         }
 
         /* Card de Resumo */
@@ -215,6 +242,90 @@
             cursor: pointer;
         }
 
+        /* MODAL (Lista de Compras) */
+        .modal {
+            display: none; 
+            position: fixed; 
+            z-index: 100; 
+            left: 0;
+            top: 0;
+            width: 100%; 
+            height: 100%; 
+            background-color: var(--overlay);
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            border-radius: 20px;
+            width: 100%;
+            max-width: 500px;
+            max-height: 80vh;
+            overflow-y: auto;
+            padding: 20px;
+            position: relative;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+            animation: slideUp 0.3s ease;
+        }
+
+        @keyframes slideUp {
+            from {transform: translateY(20px); opacity: 0;}
+            to {transform: translateY(0); opacity: 1;}
+        }
+
+        .modal-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 10px;
+        }
+
+        .close-modal {
+            background: none;
+            border: none;
+            font-size: 1.5rem;
+            cursor: pointer;
+            color: var(--text-light);
+        }
+
+        .category-title {
+            color: var(--primary-dark);
+            margin-top: 15px;
+            margin-bottom: 10px;
+            font-size: 1.1rem;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .shopping-item {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 8px 0;
+            border-bottom: 1px dashed #f0f0f0;
+        }
+
+        .shopping-item input[type="checkbox"] {
+            width: 20px;
+            height: 20px;
+            accent-color: var(--primary);
+        }
+
+        .shopping-item label {
+            cursor: pointer;
+            flex: 1;
+        }
+
+        .shopping-item input:checked + label {
+            text-decoration: line-through;
+            color: #aaa;
+        }
+
     </style>
 </head>
 <body>
@@ -240,6 +351,10 @@
             </div>
         </div>
 
+        <button class="btn-shopping" onclick="toggleModal(true)">
+            🛒 Ver Lista de Compras da Semana
+        </button>
+
         <div class="water-tracker">
             <h3>💧 Hidratação</h3>
             <p>Beba 3 a 3,5 litros hoje!</p>
@@ -256,8 +371,22 @@
         <button class="reset-btn" onclick="resetDay()">Começar novo dia ↻</button>
     </div>
 
+    <div id="shoppingModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Lista de Compras 📝</h2>
+                <button class="close-modal" onclick="toggleModal(false)">&times;</button>
+            </div>
+            <div id="shopping-list-content">
+                </div>
+            <p style="text-align: center; margin-top: 20px; font-size: 0.8rem; color: #888;">
+                Itens calculados para uma semana inteira.
+            </p>
+        </div>
+    </div>
+
     <script>
-        // Dados da Dieta
+        // === DADOS DA DIETA ===
         const dietData = [
             {
                 id: 'cafe',
@@ -330,7 +459,38 @@
             }
         ];
 
-        // Estado inicial
+        // === DADOS DA LISTA DE COMPRAS ===
+        const shoppingList = {
+            "🥦 Hortifruti": [
+                "Maçã, Banana Prata, Melão",
+                "Alface, Rúcula, Agrião",
+                "Tomate, Pepino",
+                "Cenoura, Vagem, Brócolis, Abobrinha",
+                "Batata (opção para jantar)"
+            ],
+            "🥩 Açougue e Frios": [
+                "Frango ou Patinho Moído/Bife (aprox. 2kg)",
+                "Peito de Peru (Fatiado)",
+                "Queijo Mussarela (Fatiado)",
+                "Ovos (1 Dúzia)"
+            ],
+            "🥛 Laticínios": [
+                "Leite Semi-desnatado (3 Litros)",
+                "Requeijão Light (2 potes)",
+                "Iogurte Light ou Natural (7 unidades)"
+            ],
+            "🍞 Mercearia e Padaria": [
+                "Pão Francês",
+                "Pão de Forma Branco",
+                "Arroz Branco",
+                "Feijão Carioca",
+                "Toddy Light",
+                "Maionese Tradicional",
+                "Azeite de Oliva"
+            ]
+        };
+
+        // === ESTADO DO APP ===
         let waterML = 0;
         const waterGoal = 3500;
         let checkedMeals = JSON.parse(localStorage.getItem('bestieMeals')) || [];
@@ -340,9 +500,10 @@
             renderMeals();
             loadWater();
             updateWaterUI();
+            renderShoppingList();
         }
 
-        // Renderizar Refeições
+        // --- LÓGICA DE REFEIÇÕES ---
         function renderMeals() {
             const container = document.getElementById('meals-container');
             container.innerHTML = '';
@@ -374,7 +535,6 @@
             });
         }
 
-        // Lógica das Refeições
         function toggleMeal(id) {
             if (checkedMeals.includes(id)) {
                 checkedMeals = checkedMeals.filter(m => m !== id);
@@ -385,7 +545,7 @@
             renderMeals();
         }
 
-        // Lógica da Água
+        // --- LÓGICA DA ÁGUA ---
         function loadWater() {
             const savedWater = localStorage.getItem('bestieWater');
             if (savedWater) {
@@ -395,7 +555,7 @@
 
         function addWater() {
             waterML += 250;
-            if (waterML > waterGoal + 500) waterML = waterGoal + 500; // Limite visual
+            if (waterML > waterGoal + 500) waterML = waterGoal + 500; 
             localStorage.setItem('bestieWater', waterML);
             updateWaterUI();
         }
@@ -406,9 +566,43 @@
             document.getElementById('waterCount').innerText = waterML;
         }
 
-        // Resetar tudo (Novo dia)
+        // --- LÓGICA DO SHOPPING LIST ---
+        function renderShoppingList() {
+            const content = document.getElementById('shopping-list-content');
+            let html = '';
+
+            for (const [category, items] of Object.entries(shoppingList)) {
+                html += `<h3 class="category-title">${category}</h3>`;
+                items.forEach((item, index) => {
+                    // ID único para cada checkbox
+                    const itemId = `shop-${category.replace(/\s/g, '')}-${index}`;
+                    html += `
+                        <div class="shopping-item">
+                            <input type="checkbox" id="${itemId}">
+                            <label for="${itemId}">${item}</label>
+                        </div>
+                    `;
+                });
+            }
+            content.innerHTML = html;
+        }
+
+        function toggleModal(show) {
+            const modal = document.getElementById('shoppingModal');
+            modal.style.display = show ? 'flex' : 'none';
+        }
+
+        // Fechar modal ao clicar fora
+        window.onclick = function(event) {
+            const modal = document.getElementById('shoppingModal');
+            if (event.target == modal) {
+                toggleModal(false);
+            }
+        }
+
+        // --- RESET GERAL ---
         function resetDay() {
-            if(confirm("Começar um novo dia? Isso vai zerar suas marcações.")) {
+            if(confirm("Começar um novo dia? Isso vai zerar suas marcações de refeição e água.")) {
                 waterML = 0;
                 checkedMeals = [];
                 localStorage.setItem('bestieWater', 0);
